# runGhcBWrap-core

./: runGhcBWrap-core.cabal  shell.nix
src/RunGhc/: Executable.hs  MakeExe.hs  MakeTest.hs  MakeTestOld.hs  TrivialBuilders.hs  UserInput.hs
src/RunGhc/MakeTest/: #HKTs.hs#  .#HKTs.hs  FFI.hs  FFI_odl.hs  HKTs.hs  TypeSig.hs
test/: FFISpec.hs  HKTsSpec.hs  Main.hs  TypeSigSpec.hs
