--cabal-version: 3.10
cabal-version: >= 1.8
name: runGhcBWrap-core
version: 0.1.0.0
--license: BSD-3-Clause
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , data-default    
    , filepath
    , IStr
    , parsec
    , random
    , scrappy-core
    , split
    , text
  exposed-modules:
        RunGhc.UserInput
        RunGhc.TrivialBuilders
        RunGhc.MakeTest
        RunGhc.MakeTest.TypeSig
        RunGhc.MakeTest.HKTs
        RunGhc.MakeTest.FFI
        RunGhc.MakeExe
        RunGhc.Executable        
        RunGhc.Locate
        RunGhc.LocatedModule               
        RunGhc.SystemModule

test-suite runghc-core-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      aeson
    , base
    , hspec
    , runGhcBWrap-core
  other-modules:
      TypeSigSpec
      HKTsSpec
      FFISpec
