--cabal-version: 3.10
category: Control
maintainer: galen.sprout@gmail.com
cabal-version: >= 1.10
name: runGhcBWrap-core
version: 0.1.0.0
license: MIT
synopsis:
        Build haskell executables
description:
        Build haskell executables through types and IStr, with the ability to pass data back and forth via JSON and types from this package.
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: IStr >= 0.1.0 && < 0.2
               , aeson >= 2.2.3 && < 2.3
               , base >= 4.20.2 && < 4.21
               , data-default >= 0.8.0 && < 0.9
               , filepath >= 1.5.4 && < 1.6
               , parsec >= 3.1.18 && < 3.2
               , random >= 1.3.1 && < 1.4
               , scrappy-core >= 0.1.0 && < 0.2
               , split >= 0.2.5 && < 0.3
               , text >= 2.1.3 && < 2.2
  exposed-modules:
        RunGhc.UserInput
        RunGhc.TrivialBuilders
        RunGhc.MakeTest
        RunGhc.MakeTest.TypeSig
        RunGhc.MakeTest.HKTs
        RunGhc.MakeTest.FFI
        RunGhc.MakeExe
        RunGhc.Executable        
        RunGhc.Locate
        RunGhc.LocatedModule               
        RunGhc.SystemModule

test-suite runghc-core-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      aeson
    , base
    , hspec
    , runGhcBWrap-core
  other-modules:
      TypeSigSpec
      HKTsSpec
      FFISpec
