--cabal-version: 3.10
category: Control
maintainer: galen.sprout@gmail.com
cabal-version: >= 1.10
name: runGhcBWrap-core
version: 0.1.0.0
license: MIT
synopsis:
        Build haskell executables
description:
        Build haskell executables through types and IStr, with the ability to pass data back and forth via JSON and types from this package.
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: IStr
               , aeson
               , base
               , data-default
               , filepath
               , parsec
               , random
               , scrappy-core
               , split
               , text
  exposed-modules:
        RunGhc.UserInput
        RunGhc.TrivialBuilders
        RunGhc.MakeTest
        RunGhc.MakeTest.TypeSig
        RunGhc.MakeTest.HKTs
        RunGhc.MakeTest.FFI
        RunGhc.MakeExe
        RunGhc.Executable        
        RunGhc.Locate
        RunGhc.LocatedModule               
        RunGhc.SystemModule

test-suite runghc-core-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      aeson
    , base
    , hspec
    , runGhcBWrap-core
  other-modules:
      TypeSigSpec
      HKTsSpec
      FFISpec
